--- a/configs/config_example.env
+++ b/configs/config_example.env
@@ -4,6 +4,6 @@ TIME_LIMIT_PASSWORD="1m"
 MAX_COUNT_FOR_TIME_LIMIT_PASSWORD=100
 TIME_LIMIT_IP="1m"
 MAX_COUNT_FOR_TIME_LIMIT_IP=1000
-GRPC_HOST="127.0.0.1"
+GRPC_HOST="server"
 GRPC_PORT="9993"
 CLEANUP_PERIOD="1m"
