--- a/docker/DockerfileClient
+++ b/docker/DockerfileClient
@@ -2,10 +2,10 @@ FROM golang:1.18.5
 
 ENV GOPATH=/
 
-COPY ./ ./
+COPY .. ./
 
 RUN go mod download
 
-RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o ./abf-client ./cmd/client/main.go
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o ./abf-client ./api/client/
 
 CMD exec /bin/bash -c "trap : TERM INT; sleep infinity & wait"
