--- a/configs/config_test.env
+++ b/configs/config_test.env
@@ -7,3 +7,8 @@ MAX_COUNT_FOR_TIME_LIMIT_IP=3
 GRPC_HOST="127.0.0.1"
 GRPC_PORT="9992"
 CLEANUP_PERIOD="10s"
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_NAME=abf
+DB_USER=abf_user
+DB_PASSWORD=abf_password
