--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,5 +13,7 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: go mod tidy
+      - run: |
+          cp -n ${{ github.workspace }}/configs/config_example.env ${{ github.workspace }}/configs/config.env
       - run: make test
       - run: make lint
