--- a/configs/config_example.env
+++ b/configs/config_example.env
@@ -7,3 +7,8 @@ MAX_COUNT_FOR_TIME_LIMIT_IP=1000
 GRPC_HOST="server"
 GRPC_PORT="9993"
 CLEANUP_PERIOD="1m"
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_NAME=abf
+DB_USER=abf_user
+DB_PASSWORD=abf_password
