--- a/docker/docker-compose.integr.yml
+++ b/docker/docker-compose.integr.yml
@@ -3,12 +3,9 @@ version: "3.9"
 services:
   pg:
     image: postgres
-    volumes:
-      - ./postgres/data:/var/lib/postgresql/data
     ports:
       - "5432:5432"
     environment:
-      PGDATA: ./postgresql/data/pgdata
       POSTGRES_DB: ${DB_NAME}
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
@@ -28,15 +25,16 @@ services:
     volumes:
       - ../:/abf
     ports:
-      - "9993:9993"
+      - "9992:9992"
     depends_on:
       - pg
-    command: /abf/bin/server --config=/abf/configs/config.env
-  client:
+    command: /abf/bin/server --config=/abf/configs/config_test.env
+  integr:
     build:
       context: ..
-      dockerfile: ./docker/DockerfileClient
+      dockerfile: ./docker/DockerfileIntegr
     volumes:
       - ../:/abf
     depends_on:
+      - migration
       - pg
